--- a/WebApplicationHamburgueriaMvc/Views/_ViewImports.cshtml
+++ b/WebApplicationHamburgueriaMvc/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using WebApplicationHamburgueriaMvc
 @using WebApplicationHamburgueriaMvc.Models
+@using WebApplicationHamburgueriaMvc.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
