Criando uma TagHelper - EmailTagHelper

--- a/WebApplicationHamburgueriaMvc/Views/_ViewImports.cshtml
+++ b/WebApplicationHamburgueriaMvc/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using WebApplicationHamburgueriaMvc.Models
 @using WebApplicationHamburgueriaMvc.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper WebApplicationHamburgueriaMvc.TagHelpers.*, WebApplicationHamburgueriaMvc
