criando repositórios para pedidos

--- a/WebApplicationHamburgueriaMvc/Views/Shared/_Layout.cshtml
+++ b/WebApplicationHamburgueriaMvc/Views/Shared/_Layout.cshtml
@@ -23,6 +23,21 @@
                     @await Component.InvokeAsync("CategoriaMenu")
                     <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                     <a class="nav-link text-light" asp-area="" asp-controller="Contato" asp-action="Index">Contato</a>
+
+                    <form class="d-flex justify-content-end" asp-controller="Lanche" asp-action="Search" method="get">
+                        <div class="input-group w-50">
+                            <!-- Campo de Busca -->
+                            <input type="text" class="form-control" placeholder="Procurar produto" name="searchString"
+                                   value="@ViewData["searchString"]" aria-label="Procurar produto" aria-describedby="searchButton">
+
+                            <!-- Botão de Pesquisa -->
+                            <button class="btn btn-outline-primary" type="submit" id="searchButton">
+                                <i class="bi bi-search"></i> <!-- Ícone de pesquisa -->
+                            </button>
+                        </div>
+                    </form>
+
+
                 </div>
             </div>
         </nav>
