--- a/WebApplicationHamburgueriaMvc/Views/Pedido/Checkout.cshtml
+++ b/WebApplicationHamburgueriaMvc/Views/Pedido/Checkout.cshtml
@@ -58,7 +58,7 @@
         <!-- Cidade -->
         <div class="col-md-4 mb-3">
             <label asp-for="Cidade" class="form-label">Cidade</label>
-            <input asp-for="Cidade" class="form-control" value="Lins" required />
+            <input asp-for="Cidade" class="form-control" required />
             <div class="invalid-feedback">
                 Por favor, insira sua cidade.
             </div>
@@ -68,7 +68,7 @@
         <!-- Estado -->
         <div class="col-md-4 mb-3">
             <label asp-for="Estado" class="form-label">Estado</label>
-            <input asp-for="Estado" class="form-control" value="São Paulo" required />
+            <input asp-for="Estado" class="form-control" required />
             <div class="invalid-feedback">
                 Por favor, insira seu estado.
             </div>
