feat: finalizado a implementacao de registro, login e logout de usuario

--- a/WebApplicationHamburgueriaMvc/Views/Shared/Components/CarrinhoCompraResumo/Default.cshtml
+++ b/WebApplicationHamburgueriaMvc/Views/Shared/Components/CarrinhoCompraResumo/Default.cshtml
@@ -3,7 +3,7 @@
 @if (Model.CarrinhoCompra.CarrinhoCompraItens.Count > 0)
 {
     <a asp-controller="CarrinhoCompra" asp-action="Index" class="d-flex align-items-center text-decoration-none">
-        <img src="~/images/carrinho.png" alt="Ícone do Carrinho" class="me-2" width="30" />
+        <img src="~/images/Full-Cart-icon.png" alt="Ícone do Carrinho" class="me-2" width="30" />
         <span class="badge bg-danger text-white">
             @Model.CarrinhoCompra.CarrinhoCompraItens.Count
         </span>
