--- a/WebApplicationHamburgueriaMvc/Views/Shared/_Layout.cshtml
+++ b/WebApplicationHamburgueriaMvc/Views/Shared/_Layout.cshtml
@@ -33,6 +33,12 @@
                     </form>
 
                     @await Html.PartialAsync("_LoginPartial")
+
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <a class="nav-link text-light" asp-area="Admin" asp-controller="Admin" asp-action="Index">Admin</a>
+                    }
+
                 </div>
             </div>
         </nav>
