--- a/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminLanches/Index.cshtml
+++ b/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminLanches/Index.cshtml
@@ -1,83 +1,60 @@
-﻿@model IEnumerable<WebApplicationHamburgueriaMvc.Models.Lanche>
+﻿@model ReflectionIT.Mvc.Paging.PagingList<WebApplicationHamburgueriaMvc.Models.Lanche>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Lista de Lanches";
 }
 
-<h1>Index</h1>
+<h3 class="mb-4">Lanches</h3>
+
+<form method="get" class="form-inline mb-4">
+    <div class="input-group">
+        <input name="filter" class="form-control" placeholder="Pesquisar por filtro" value="@Model.RouteValue["Filter"]" />
+        <button type="submit" class="btn btn-info">Procurar</button>
+    </div>
+</form>
+
+<div class="mb-3">
+    <strong>Total de Lanches:</strong> @Model.TotalRecordCount
+</div>
+
+<div class="mb-4">
+    <vc:pager paging-list="@Model"></vc:pager>
+</div>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-success" asp-action="Create">Criar Novo Lanche</a>
 </p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Nome)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DescricaoCurta)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DescricaoDetalhada)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Preco)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ImagemUrl)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ImagemThumbnailUrl)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IsLanchePreferido)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.EmEstoque)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Categoria)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DescricaoCurta)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DescricaoDetalhada)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Preco)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ImagemUrl)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ImagemThumbnailUrl)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsLanchePreferido)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EmEstoque)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Categoria.CategoriaNome)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.LancheId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.LancheId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.LancheId">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+
+<div class="table-responsive">
+    <table class="table table-striped table-bordered">
+        <thead class="table-dark">
+            <tr>
+                <th>@Html.DisplayNameFor(model => model.Nome)</th>
+                <th>@Html.DisplayNameFor(model => model.DescricaoCurta)</th>
+                <th>@Html.DisplayNameFor(model => model.Preco)</th>
+                <th>@Html.DisplayNameFor(model => model.IsLanchePreferido)</th>
+                <th>@Html.DisplayNameFor(model => model.EmEstoque)</th>
+                <th>@Html.DisplayNameFor(model => model.Categoria.CategoriaNome)</th>
+                <th>Ações</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@Html.DisplayFor(modelItem => item.Nome)</td>
+                    <td>@Html.DisplayFor(modelItem => item.DescricaoCurta)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Preco)</td>
+                    <td>@Html.DisplayFor(modelItem => item.IsLanchePreferido)</td>
+                    <td>@Html.DisplayFor(modelItem => item.EmEstoque)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Categoria.CategoriaNome)</td>
+                    <td>
+                        <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@item.LancheId">Editar</a>
+                        <a class="btn btn-sm btn-info" asp-action="Details" asp-route-id="@item.LancheId">Detalhes</a>
+                        <a class="btn btn-sm btn-danger" asp-action="Delete" asp-route-id="@item.LancheId">Excluir</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
