--- a/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminPedidos/Index.cshtml
+++ b/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminPedidos/Index.cshtml
@@ -1,95 +1,69 @@
-﻿@model IEnumerable<WebApplicationHamburgueriaMvc.Models.Pedido>
+﻿@model ReflectionIT.Mvc.Paging.PagingList<WebApplicationHamburgueriaMvc.Models.Pedido>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Lista de Pedidos";
 }
 
-<h1>Index</h1>
+<h3 class="mb-4">Pedidos</h3>
+
+<form method="get" class="form-inline mb-4">
+    <div class="input-group">
+        <input name="filter" class="form-control" placeholder="Pesquisar por filtro"
+               value="@Model.RouteValue["Filter"]" />
+        <button type="submit" class="btn btn-info">Procurar</button>
+    </div>
+</form>
+
+<div class="mb-3">
+    <strong>Total de Pedidos:</strong> @Model.TotalRecordCount
+</div>
+
+<div class="mb-4">
+    <vc:pager paging-list="@Model"></vc:pager>
+</div>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-success" asp-action="Create">Criar Novo Pedido</a>
 </p>
-<table class="table">
-    <thead>
+
+<table class="table table-striped table-bordered">
+    <thead class="table-dark">
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Nome)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Sobrenome)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Endereco1)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Endereco2)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Cep)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Estado)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Cidade)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Telefone)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PedidoEnviado)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PedidoEntregueEm)
-            </th>
-            <th></th>
+            <th>@Html.DisplayNameFor(model => model.Nome)</th>
+            <th>@Html.DisplayNameFor(model => model.Sobrenome)</th>
+            <th>@Html.DisplayNameFor(model => model.Endereco1)</th>
+            <th>@Html.DisplayNameFor(model => model.Endereco2)</th>
+            <th>@Html.DisplayNameFor(model => model.Cep)</th>
+            <th>@Html.DisplayNameFor(model => model.Estado)</th>
+            <th>@Html.DisplayNameFor(model => model.Cidade)</th>
+            <th>@Html.DisplayNameFor(model => model.Telefone)</th>
+            <th>@Html.DisplayNameFor(model => model.Email)</th>
+            <th>@Html.DisplayNameFor(model => model.PedidoEnviado)</th>
+            <th>@Html.DisplayNameFor(model => model.PedidoEntregueEm)</th>
+            <th>Ações</th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Sobrenome)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Endereco1)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Endereco2)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cep)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Estado)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cidade)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Telefone)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PedidoEnviado)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PedidoEntregueEm)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.PedidoId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.PedidoId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.PedidoId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@Html.DisplayFor(modelItem => item.Nome)</td>
+                <td>@Html.DisplayFor(modelItem => item.Sobrenome)</td>
+                <td>@Html.DisplayFor(modelItem => item.Endereco1)</td>
+                <td>@Html.DisplayFor(modelItem => item.Endereco2)</td>
+                <td>@Html.DisplayFor(modelItem => item.Cep)</td>
+                <td>@Html.DisplayFor(modelItem => item.Estado)</td>
+                <td>@Html.DisplayFor(modelItem => item.Cidade)</td>
+                <td>@Html.DisplayFor(modelItem => item.Telefone)</td>
+                <td>@Html.DisplayFor(modelItem => item.Email)</td>
+                <td>@Html.DisplayFor(modelItem => item.PedidoEnviado)</td>
+                <td>@Html.DisplayFor(modelItem => item.PedidoEntregueEm)</td>
+                <td>
+                    <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@item.PedidoId">Editar</a>
+                    <a class="btn btn-sm btn-info" asp-action="Details" asp-route-id="@item.PedidoId">Detalhes</a>
+                    <a class="btn btn-sm btn-danger" asp-action="Delete" asp-route-id="@item.PedidoId">Excluir</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
