feat: implementando relatório de pedidos por período
acessível somente para usuários administradores!

--- a/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminPedidos/Index.cshtml
+++ b/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminPedidos/Index.cshtml
@@ -62,6 +62,7 @@
                     <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@item.PedidoId">Editar</a>
                     <a class="btn btn-sm btn-info" asp-action="Details" asp-route-id="@item.PedidoId">Detalhes</a>
                     <a class="btn btn-sm btn-danger" asp-action="Delete" asp-route-id="@item.PedidoId">Excluir</a>
+                    <a class="btn btn-sm btn-info" asp-action="PedidoLanches" asp-route-id="@item.PedidoId">Ver Itens</a>
                 </td>
             </tr>
         }
