--- a/WebApplicationHamburgueriaMvc/Areas/Admin/Views/_ViewImports.cshtml
+++ b/WebApplicationHamburgueriaMvc/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using WebApplicationHamburgueriaMvc.Models
 @using WebApplicationHamburgueriaMvc.ViewModels
 @using ReflectionIT.Mvc.Paging
+@using System.IO
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper WebApplicationHamburgueriaMvc.TagHelpers.*, WebApplicationHamburgueriaMvc
 @addTagHelper *, ReflectionIT.Mvc.Paging
