feat: gráfico de vendas (anual, mensal e semanal) utilizando google chart

--- a/WebApplicationHamburgueriaMvc/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebApplicationHamburgueriaMvc/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -34,6 +34,35 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="Admin" asp-controller="AdminRelatorioVendas" asp-action="Index">Relatório de Vendas</a>
                         </li>
+
+                        <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle"
+                                    type="button"
+                                    id="dropdownMenuButton1"
+                                    data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                Gráficos de Vendas
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                <li>
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="AdminGrafico" asp-action="Index">
+                                        Vendas Anual
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="AdminGrafico" asp-action="VendasMensal" asp-route-dias="30">
+                                        Vendas Mensais
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="AdminGrafico" asp-action="VendasSemanal" asp-route-dias="7">
+                                        Vendas Semanais
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+
+
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="Admin" asp-controller="AdminImagens" asp-action="Index">Gerenciar Imagens</a>
                         </li>
