--- a/WebApplicationHamburgueriaMvc/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebApplicationHamburgueriaMvc/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -12,64 +12,7 @@
 <body>
     <!-- Header -->
     <header>
-        <nav class="navbar navbar-expand-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="Admin" asp-controller="Admin" asp-action="Index">Admin</a>
-
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="Admin" asp-controller="AdminLanches" asp-action="Index">Produtos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="Admin" asp-controller="AdminCategorias" asp-action="Index">Categorias</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="Admin" asp-controller="AdminPedidos" asp-action="Index">Pedidos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="Admin" asp-controller="AdminRelatorioVendas" asp-action="Index">Relatório de Vendas</a>
-                        </li>
-
-                        <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle"
-                                    type="button"
-                                    id="dropdownMenuButton1"
-                                    data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                Gráficos de Vendas
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li>
-                                    <a class="dropdown-item" asp-area="Admin" asp-controller="AdminGrafico" asp-action="Index">
-                                        Vendas Anual
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" asp-area="Admin" asp-controller="AdminGrafico" asp-action="VendasMensal" asp-route-dias="30">
-                                        Vendas Mensais
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" asp-area="Admin" asp-controller="AdminGrafico" asp-action="VendasSemanal" asp-route-dias="7">
-                                        Vendas Semanais
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-
-
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="Admin" asp-controller="AdminImagens" asp-action="Index">Gerenciar Imagens</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <partial name="_HeaderPartial" />
     </header>
 
     <!-- Main Content -->
@@ -81,9 +24,7 @@
 
     <!-- Footer -->
     <footer class="border-top footer text-muted py-3">
-        <div class="container text-center">
-            <p>&copy; 2021 - <a target="_blank" href="http://www.macoratti.net">Macoratti.net</a></p>
-        </div>
+        <partial name="_FooterPartial" />
     </footer>
 
     <!-- Scripts -->
