--- a/WebApplicationHamburgueriaMvc/Views/Shared/_HeaderPartial.cshtml
+++ b/WebApplicationHamburgueriaMvc/Views/Shared/_HeaderPartial.cshtml
@@ -1,34 +1,60 @@
-﻿<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
+﻿<nav class="navbar navbar-expand-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
     <div class="container">
-        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-            <img src="~/images/logo_lanche2-sfd.png" />
+
+        <!-- Logo e Marca -->
+        <a class="navbar-brand d-flex align-items-center" asp-area="" asp-controller="Home" asp-action="Index">
+            <img src="~/images/logo_lanche2-sfd.png" alt="Logo LanchesMac" class="me-2" />
             LanchesMac
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
+
+        <!-- Botão para Mobile -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar"
+                aria-controls="mainNavbar" aria-expanded="false" aria-label="Alternar Navegação">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-            @await Component.InvokeAsync("CarrinhoCompraResumo")
-            @await Component.InvokeAsync("CategoriaMenu")
-            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-            <a class="nav-link text-light" asp-area="" asp-controller="Contato" asp-action="Index">Contato</a>
 
-            <form class="d-flex justify-content-end" asp-controller="Lanche" asp-action="Search" method="get">
-                <div class="input-group">
-                    <!-- Campo de Busca -->
-                    <input type="text" class="form-control" placeholder="Procurar produto" name="searchString"
-                           value="@ViewData["searchString"]" aria-label="Procurar produto" aria-describedby="searchButton">
-                </div>
-            </form>
+        <!-- Menu Principal -->
+        <div class="collapse navbar-collapse" id="mainNavbar">
+            <ul class="navbar-nav ms-auto mb-2 mb-sm-0">
+                <!-- Componentes Dinâmicos -->
+                <li class="nav-item">
+                    @await Component.InvokeAsync("CategoriaMenu")
+                </li>
 
-            @await Html.PartialAsync("_LoginPartial")
+                <!-- Campo de Busca -->
+                <li class="nav-item">
+                    <form class="d-flex" asp-controller="Lanche" asp-action="Search" method="get">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Procurar produto" name="searchString"
+                                   value="@ViewData["searchString"]" aria-label="Procurar produto">
+                        </div>
+                    </form>
+                </li>
 
-            @if (User.IsInRole("Admin"))
-            {
-                <a class="nav-link text-light" asp-area="Admin" asp-controller="Admin" asp-action="Index">Admin</a>
-            }
+                <!-- Links de Navegação -->
+                <li class="nav-item">
+                    <a class="nav-link text-light" asp-area="" asp-controller="Contato" asp-action="Index">Contato</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                </li>
 
+                <!-- Link Administrativo (Somente para Admins) -->
+                @if (User.IsInRole("Admin"))
+                {
+                    <li class="nav-item">
+                        <a class="nav-link text-light" asp-area="Admin" asp-controller="Admin" asp-action="Index">Admin</a>
+                    </li>
+                }
+
+                <!-- Login e Carrinho -->
+                <li class="nav-item">
+                    @await Html.PartialAsync("_LoginPartial")
+                </li>
+                <li class="nav-item">
+                    @await Component.InvokeAsync("CarrinhoCompraResumo")
+                </li>
+            </ul>
         </div>
     </div>
 </nav>
