feat: gerando relatório em pdf usando FastReport Open Source
acessível apenas a nível administrador!

--- a/WebApplicationHamburgueriaMvc/Areas/Admin/Views/Admin/Index.cshtml
+++ b/WebApplicationHamburgueriaMvc/Areas/Admin/Views/Admin/Index.cshtml
@@ -1,4 +1,8 @@
-﻿<div class="container my-4">
+﻿@{
+    ViewData["Title"] = "Página Inicial";
+}
+
+<div class="container my-4">
     <div class="text-center">
         <img src="~/images/adminarea.jpg" alt="Área de Administração" class="img-fluid mb-3" />
     </div>
