--- a/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminGrafico/Index.cshtml
+++ b/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminGrafico/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<title>@ViewData["Title"] - Gráfico de Vendas</title>
+﻿@{
+    ViewData["Title"] = "Gráfico de Vendas";
+}
 
 <!-- Google Charts Loader -->
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
