--- a/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminGrafico/VendasSemanal.cshtml
+++ b/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminGrafico/VendasSemanal.cshtml
@@ -1,6 +1,6 @@
-﻿<title>
-    @ViewData["Title"] - Grafico de Vendas
-</title>
+﻿@{
+    ViewData["Title"] = "Gráfico de Vendas";
+}
 
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
