--- a/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminImagens/GetImagens.cshtml
+++ b/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminImagens/GetImagens.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FileManagerModel
 
 @{
-    ViewBag.Title = "Arquivos";
+    ViewData["Title"] = "Arquivos";
 }
 
 @if (Model.Files != null)
