--- a/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminLanches/Create.cshtml
+++ b/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminLanches/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebApplicationHamburgueriaMvc.Models.Lanche
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criar";
 }
 
 <h3>Criar Produto</h3>
