--- a/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminLanches/Edit.cshtml
+++ b/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminLanches/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebApplicationHamburgueriaMvc.Models.Lanche
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 <h3>Editar Produto</h3>
 <hr />
