--- a/WebApplicationHamburgueriaMvc/Views/Account/Register.cshtml
+++ b/WebApplicationHamburgueriaMvc/Views/Account/Register.cshtml
@@ -1,5 +1,9 @@
 ﻿@model LoginViewModel
 
+@{
+    ViewData["Title"] = "Registre-se";
+}
+
 <div class="container my-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
