--- a/WebApplicationHamburgueriaMvc/Views/Contato/Index.cshtml
+++ b/WebApplicationHamburgueriaMvc/Views/Contato/Index.cshtml
@@ -1,4 +1,8 @@
-﻿<div class="container my-5">
+﻿@{
+    ViewData["Title"] = "Contato";
+}
+
+<div class="container my-5">
     <!-- Imagem de introdução -->
     <div class="text-center mb-4">
         <img src="~/images/faleconosco1.jpg" alt="Fale conosco" class="img-fluid rounded shadow" />
