--- a/WebApplicationHamburgueriaMvc/Views/Lanche/Details.cshtml
+++ b/WebApplicationHamburgueriaMvc/Views/Lanche/Details.cshtml
@@ -1,5 +1,9 @@
 ﻿@model Lanche
 
+@{
+    ViewData["Title"] = @Model.Nome;
+}
+
 <div class="container mt-4">
     <div class="row justify-content-center">
         <div class="card shadow-lg" style="max-width: 500px;">
