--- a/WebApplicationHamburgueriaMvc/Views/Lanche/List.cshtml
+++ b/WebApplicationHamburgueriaMvc/Views/Lanche/List.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LancheListViewModel
 
 @{
-    ViewData["Title"] = "List";
+    ViewData["Title"] = "Lanches";
 }
 
 <h1 class="text-center my-4">@Model.CategoriaAtual</h1>
