--- a/WebApplicationHamburgueriaMvc/Views/Pedido/CheckoutCompleto.cshtml
+++ b/WebApplicationHamburgueriaMvc/Views/Pedido/CheckoutCompleto.cshtml
@@ -1,5 +1,9 @@
 ﻿@model Pedido
 
+@{
+    ViewData["Title"] = "Pedido Enviado";
+}
+
 <div class="container my-5">
     <div class="jumbotron text-center bg-light p-4 rounded">
         <h2 class="text-success">@ViewBag.CheckoutCompletoMensagem</h2>
