--- a/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminCategorias/Create.cshtml
+++ b/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminCategorias/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model WebApplicationHamburgueriaMvc.Models.Categoria
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criar Categoria";
 }
 
-<h1>Create</h1>
+<h1>Criar</h1>
 
 <h4>Categoria</h4>
 <hr />
@@ -23,13 +23,13 @@
                 <span asp-validation-for="Descricao" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Criar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar para Lista</a>
 </div>
 
