--- a/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminCategorias/Details.cshtml
+++ b/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminCategorias/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model WebApplicationHamburgueriaMvc.Models.Categoria
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhe";
 }
 
-<h1>Details</h1>
+<h1>Detalhes</h1>
 
 <div>
     <h4>Categoria</h4>
@@ -25,6 +25,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.CategoriaId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.CategoriaId">Editar</a> |
+    <a asp-action="Index">Voltar para Lista</a>
 </div>
