--- a/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminCategorias/Index.cshtml
+++ b/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminCategorias/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<WebApplicationHamburgueriaMvc.Models.Categoria>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Listagem";
 }
 
-<h1>Index</h1>
+<h1>Listagem de Categorias</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Criar Novo(a)</a>
 </p>
 <table class="table">
     <thead>
@@ -31,9 +31,9 @@
                 @Html.DisplayFor(modelItem => item.Descricao)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.CategoriaId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CategoriaId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CategoriaId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.CategoriaId">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.CategoriaId">Detalhes</a> |
+                <a asp-action="Delete" asp-route-id="@item.CategoriaId">Deletar</a>
             </td>
         </tr>
 }
