--- a/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminLanches/Details.cshtml
+++ b/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminLanches/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model WebApplicationHamburgueriaMvc.Models.Lanche
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
 }
 
-<h1>Details</h1>
+<h1>Detalhes</h1>
 
 <div>
     <h4>Lanche</h4>
@@ -67,6 +67,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.LancheId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.LancheId">Editar</a> |
+    <a asp-action="Index">Voltar para a Lista</a>
 </div>
