--- a/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminPedidos/Create.cshtml
+++ b/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminPedidos/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model WebApplicationHamburgueriaMvc.Models.Pedido
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Criar";
 }
 
-<h1>Create</h1>
+<h1>Criar</h1>
 
 <h4>Pedido</h4>
 <hr />
@@ -75,6 +75,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar para a Lista</a>
 </div>
 
