--- a/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminPedidos/Delete.cshtml
+++ b/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminPedidos/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model WebApplicationHamburgueriaMvc.Models.Pedido
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Deletar";
 }
 
-<h1>Delete</h1>
+<h1>Deletar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Você tem certeza que deseja deletar esse pedido?</h3>
 <div>
     <h4>Pedido</h4>
     <hr />
@@ -81,7 +81,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="PedidoId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Deletar" class="btn btn-danger" /> |
+        <a asp-action="Index">Voltar para a lista</a>
     </form>
 </div>
