--- a/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminPedidos/Details.cshtml
+++ b/WebApplicationHamburgueriaMvc/Areas/Admin/Views/AdminPedidos/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model WebApplicationHamburgueriaMvc.Models.Pedido
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
 }
 
-<h1>Details</h1>
+<h1>Detalhes</h1>
 
 <div>
     <h4>Pedido</h4>
@@ -79,6 +79,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.PedidoId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.PedidoId">Editar</a> |
+    <a asp-action="Index">Voltar para a lista</a>
 </div>
