--- a/WebApplicationHamburgueriaMvc/Views/Account/AccessDenied.cshtml
+++ b/WebApplicationHamburgueriaMvc/Views/Account/AccessDenied.cshtml
@@ -1,4 +1,7 @@
-﻿
+﻿@{
+    ViewData["Title"] = "Acesso Negado";
+}
+
 <div class="container text-center">
     <div class="alert">
         <img src="~/images/negado1.jpg" alt="Acesso negado à Área de Administração" class="img-fluid mt-3 mb-4 " />
