--- a/WebApplicationHamburgueriaMvc/Views/Account/Login.cshtml
+++ b/WebApplicationHamburgueriaMvc/Views/Account/Login.cshtml
@@ -1,5 +1,9 @@
 ﻿@model LoginViewModel
 
+@{
+    ViewData["Title"] = "Login";
+}
+
 <div class="container my-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
