--- a/WebApplicationHamburgueriaMvc/Views/Home/Index.cshtml
+++ b/WebApplicationHamburgueriaMvc/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model HomeViewModel
 
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Página Inicial";
 }
 
 <!-- Carrossel -->
